assets/css/style.css
/* ... */
.w-nav[data-animation="over-right"] .w-nav-overlay {
  width: auto;
}

.w-nav[data-animation="over-right"] .w-nav-overlay,
.w-nav[data-animation="over-right"] [data-nav-menu-open] {
  left: auto;
  z-index: 1;
  top: 0;
}

.w-nav-button {
  position: relative;
  float: right;
  padding: 18px;
  font-size: 24px;
  display: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.w-nav-button:focus {
  outline: 0;
}

.w-nav-button.w--open {
  background-color: #c8c8c8;
  color: #fff;
}

/*.w-nav[data-collapse=all] .w-nav-menu {
  display: none
}*/

.w-nav[data-collapse="all"] .w-nav-button {
  display: block;
}

/* Style the button that is used to open and close the collapsible content */
.collapsible {
  /* background-image: linear-gradient(150deg, #FFFFFF, #00D57D); */
  background-color: #191F26;
  color: #909192;
  cursor: pointer;
  padding: 25px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 1.6rem;
  font-style: italic;
}

.collapsible:hover {
  color:#00D57D
}

.snippet {
  font-family: monospace;
  color: #ffffff;
  font-weight:400;
  background: #313941;
}

@media screen and (max-width: 991px) {
   .w-nav[data-collapse=medium] .w-nav-menu {
    display: none
  }
  .w-nav[data-collapse="medium"] .w-nav-button {
    display: block;
  }
}

@media screen and (max-width: 767px) {
  /*  .w-nav[data-collapse=small] .w-nav-menu {
    display: none
  }*/
  .w-nav[data-collapse="small"] .w-nav-button {
    display: block;
  }
  .w-nav-brand {
    padding-left: 10px;
  }
}

@media screen and (max-width: 479px) {
  /*  .w-nav[data-collapse=tiny] .w-nav-menu {
    display: none
  }*/
  .w-nav[data-collapse="tiny"] .w-nav-button {
    display: block;
  }
}

.w-tabs {
  position: relative;
}

.w-tabs:after,
.w-tabs:before {
  content: " ";
  display: table;
  grid-column-start: 1;
  grid-row-start: 1;
  grid-column-end: 2;
  grid-row-end: 2;
}

.w-tabs:after {
  clear: both;
}

.w-tab-menu {
  position: relative;
}

.w-tab-link {
  position: relative;
  display: inline-block;
  vertical-align: top;
  text-decoration: none;
  padding: 9px 30px;
  text-align: left;
  cursor: pointer;
  color: #222;
  background-color: #ddd;
}

.w-tab-link.w--current {
  background-color: #c8c8c8;
}

.w-tab-link:focus {
  outline: 0;
}

.w-tab-content {
  position: relative;
  display: block;
  overflow: hidden;
}

.w-tab-pane {
  position: relative;
  display: none;
}

.w--tab-active {
  display: block;
}

@media screen and (max-width: 479px) {
  .w-tab-link {
    display: block;
  }
}

/*@keyframes spin {
  0% {
    transform: rotate(0)
  }
  100% {
    transform: rotate(360deg)
  }
}*/

#spin {
  background-image: linear-gradient(111deg, #00f2b1, #3ee6e1);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/*#spin:after {
  content: "‏‏‎‏‏‎ ‎centralizing";
  animation: spin 3s linear infinite
}
*/
/*@keyframes spin {
  25% {
    content: "‏‏‎ ‎encrypting‎‎‎‎‏‏‎"
  }
  50% {
    content: "‏‏‎ ‎managing‏‏‎"
  }
  75% {
    content: "‏‏‎ ‎securing‏‏‎"
  }
}*/

.spin {
  align-self: flex-start;
}

.fa-github:hover {
  color: #FF7D00;
}

.diagram {
  margin-top: 50px;
}

.team-grid {
  display: -ms-grid;
  display: grid;
  width: 100%;
  -webkit-box-align: start;
  -webkit-align-items: start;
  -ms-flex-align: start;
  align-items: start;
  grid-auto-columns: 1fr;
  grid-column-gap: 30px;
  -ms-grid-columns: 1fr 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}

.team-member-wrap {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.team-member-info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 20px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.team-member-name {
  margin-bottom: 10px;
  color: #e8e8e8;
  font-size: 170%;
  font-weight: 500;
  text-align: center;
}

.team-member-location {
  font-size: 20px;
  text-align: center;
  color: #b5bbbf;
}

.team-member-icons {
  list-style: none;
  padding-inline-start: 0px;
}

ul.team-member-icons li {
  display: inline;
}

.team-member-icon {
  margin: 0px 5px;
  color: #00D57D;
}

.team-member-icon:hover {
  color: #FF7D00;
}

body {
  background-color: #191F26;
  font-family: Inter, sans-serif;
  color: #ffffff;
  /*  font-size: 14px;*/
  line-height: 20px;
}

h1 {
  font-family: Inter, sans-serif;
  color: #e8e8e8;
  font-size: 64px;
  font-weight: 700;
  letter-spacing: -0.04em;
}

h2 {
  margin-top: 20px;
  margin-bottom: 10px;
  font-family: Inter, sans-serif;
  color: #FF7D00;
  font-size: 48px;
  line-height: 1.2;
  font-weight: 700;
  letter-spacing: -0.04em;
}

h3 {
  margin-top: 20px;
  margin-bottom: 10px;
  color: #00D57D;
  font-size: 36px;
  line-height: 1.3;
  font-weight: 700;
}

h4 {
  margin-top: 10px;
  margin-bottom: 10px;
  color: #0096FF;
  font-size: 30px;
  line-height: 1.4;
  font-weight: 700;
}

h5 {
  margin-top: 10px;
  margin-bottom: 10px;
  color: #ffffff;
  font-size: 24px;
  line-height: 1.4;
  font-weight: 700;
}
/* ... */

